[project]
name = "remote-procedure-call-server"
version = "0.1.0"
description = "recursion practice"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.7",
]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100", # undocumented-public-module
    "D101", # undocumented-public-class
    "D102", # undocumented-public-method
    "D103", # undocumented-public-function
    "D104", # undocumented-public-package
    "D107", # undocumented-public-init
    "G004", # logging-f-string
    "ANN003", # missing-type-kwargs
    "S101", # assert
    # conflict
    "D203", # or D211
    "D213", # or D212
    "COM812", # conflict with formatter
]

[tool.pyright]
include = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.11.13",
    "ty>=0.0.1a8",
]
